arena_server/k8s/slcee-arena/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s.io/app: slcee-arena
    k8s.io/instance: slcee-arena
  name: slcee-arena
  namespace: slcee-arena
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    k8s.io/app: slcee-arena
    k8s.io/instance: slcee-arena
