arena_server/k8s/slcee-arena/network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slcee-arena
  namespace: slcee-arena
spec:
  ingressClassName: nginx-corporate
  rules:
  - host: slcee-arena.devops01.eu.canary.clusters.cs.services.sap
    http:
      paths:
      - backend:
          service:
            name: slcee-arena
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - slcee-arena.devops01.eu.canary.clusters.cs.services.sap
    secretName: slcee-arena-managed-tls
